# futurerestore

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILING.md  Makefile  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  setBuildVersion.sh  version.txt
.github/: FUNDING.yml
.github/workflows/: build.sh  ci.yml  deps.sh  libirecovery.patch  libusb.rb  libzip.patch  linux-bootstrap.sh  linux-build.sh  linux-post.sh  linux.sh  mac-arm64.sh  mac-bootstrap.sh  mac-build.sh  mac-post.sh  mac-x86_64.sh  mac.sh  openssl@1.1.rb  proc_ci.diff  ubuntu.sh  ubuntu.tar.zst  xz.rb  zstd.rb
.github/workflows/xpwn_include/: common.h
.github/workflows/xpwn_include/dmg/: dmg.h  dmglib.h
.github/workflows/xpwn_include/hfs/: hfslib.h  hfsplus.h
.github/workflows/xpwn_include/partial/: firmwaremaster.h  partial.h
.github/workflows/xpwn_include/xpwn/: 8900.h  ibootim.h  img3.h  libxpwn.h  nor_files.h  outputstate.h  plist.h  pwnutil.h
futurerestore/: Makefile.am  config.h  futurerestore.cpp  futurerestore.hpp  main.cpp
futurerestore.xcodeproj/: project.pbxproj
futurerestore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: CMakeLists.txt  futurerestore.cpp  futurerestore.hpp  main.cpp
